--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -2,7 +2,7 @@ include $(top_srcdir)/build-aux/init.mk
 
 # -- Distribute and install headers
 nobase_include_HEADERS =				\
-		kws/kws-bezier-optimizer.hh	\
-		kws/bezier-optimizer/fwd.hh		\
-		kws/bezier-optimizer/io.hh		\
-		kws/bezier-optimizer/optimizer.hh
+		kws/kws-hash-optimizer.hh	\
+		kws/hash-optimizer/fwd.hh		\
+		kws/hash-optimizer/io.hh		\
+		kws/hash-optimizer/optimizer.hh
