Create squeleton for new direct path class. Direct path length comuptation and interpolation is done using only translation variables.

--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,7 @@ config.h.in
 configure
 aclocal.m4
 tests/testsuite
+#.gitmodules#
+include/kws/hash-optimizer/#fwd.hh#
+src/#directpath.cc#
+src/.#directpath.cc
