--- a/include/Makefile.am
+++ b/include/Makefile.am
@@ -5,4 +5,6 @@ nobase_include_HEADERS =				\
 		kws/kws-hash-optimizer.hh	\
 		kws/hash-optimizer/fwd.hh		\
 		kws/hash-optimizer/io.hh		\
-		kws/hash-optimizer/optimizer.hh
+		kws/hash-optimizer/optimizer.hh		\
+		kws/hash-optimizer/directpath.hh
+
