Add new steering method class to create direct path introduced in commit 440037c3b1865482c05b4ade3c5b4e73ff2b89f1.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -15,7 +15,8 @@ lib_LTLIBRARIES = libkws-hash-optimizer.la
 
 libkws_hash_optimizer_la_SOURCES = 			\
 				optimizer.cc		\
-				directpath.cc
+				directpath.cc		\
+				steeringmethod.cc
 
 libkws_hash_optimizer_la_LIBADD = 		\
 	$(HPP_UTIL_LIBS) 				\
