Add new distance, direct path and steering method classes to produced an optimized path that is parametrized with a time variable.

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -16,7 +16,10 @@ lib_LTLIBRARIES = libkws-hash-optimizer.la
 libkws_hash_optimizer_la_SOURCES = 			\
 				optimizer.cc		\
 				directpath.cc		\
-				steeringmethod.cc
+				steeringmethod.cc	\
+				distance.cc		\
+				elliptic-directpath.cc	\
+				elliptic-steeringmethod.cc
 
 libkws_hash_optimizer_la_LIBADD = 		\
 	$(HPP_UTIL_LIBS) 				\
